txt-output/82.txt
RAW FILE BEING COMPILED: 
---------------------------------------

module Main where

import Data.Char

-- Problem: False should be something of Int
v50 = (\x->x+3) (if True then False else 1)                               

main :: IO ()
main = putStrLn "hello world"

OUTPUT FROM GHC v 6.10.4: 
---------------------------------------

﻿C:\ghc\ghc-6.10.4\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-6.10.4\bin\ghc.exe ill-typed\82.hs *> aLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\82.hs:6:13:
    No instance for (Num Bool)
      arising from the literal `3' at ill-typed\82.hs:6:13
    Possible fix: add an instance declaration for (Num Bool)
    In the second argument of `(+)', namely `3'
    In the expression: x + 3
    In the expression: (\ x -> x + 3) (if True then False else 1)


OUTPUT FROM GHC v 9.2.5: 
---------------------------------------

﻿[1 of 1] Compiling Main             ( ill-typed\82.hs, ill-typed\82.o )
C:\ghc\ghc-9.2.5\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-9.2.5\bin\ghc.exe ill-typed\82.hs *> bLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\82.hs:6:13: error:
    * No instance for (Num Bool) arising from a use of `+'
    * In the expression: x + 3
      In the expression: \ x -> x + 3
      In the expression: (\ x -> x + 3) (if True then False else 1)
  |
6 | v50 = (\x->x+3) (if True then False else 1)                               
  |             ^
